# vllm-gguf-plugin

./: .clang-format  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  release.yml
scripts/: build_release_wheel.sh
tests/: conftest.py  test_gguf_download.py  test_gguf_generation.py  test_gguf_utils.py  test_multimodal_gguf.py  test_plugin.py
tests/diffusion/: test_diffusion_config.py  test_diffusion_generation.py  test_diffusion_loader.py  test_flux2_klein_adapter.py  test_qwen_image_adapter.py  test_z_image_adapter.py
vllm_gguf_plugin/: __init__.py  _jit.py  config_parser.py  gguf_utils.py  loader.py  model_format.py  ops.py  plugin.py  quantization.py  weight_utils.py  weights_adapter.py
vllm_gguf_plugin/csrc/: dispatch_utils.h  torch_bindings.cpp
vllm_gguf_plugin/csrc/gguf/: gguf_kernel.cu
vllm_gguf_plugin/quantization/: __init__.py  config.py  diffusion_config.py  fused_moe.py  linear.py  params.py  utils.py  vocal_embeds.py
vllm_gguf_plugin/tests/: conftest.py  test_gguf_generation.py
vllm_gguf_plugin/weights_adapter/: __init__.py  base.py  default.py  gemma3.py
vllm_gguf_plugin/weights_adapter/diffusion/: __init__.py  base.py  flux2_klein.py  integration.py  loader.py  qwen_image.py  z_image.py
